--- a/confirmation.html
+++ b/confirmation.html
@@ -1,4 +1,4 @@
-<html>
+<!-- <html>
 
 <head>
     <meta charset="utf-8">
@@ -15,7 +15,7 @@
     </style>
 </head>
 
-<body>
+<body> -->
     <div style="background-color: #F5F4FE;">
 
         <div style="width: 50%; margin: auto;background-color: #fff; padding: 50px 25px;">
@@ -96,6 +96,6 @@
         </p>
         </div>
     </div>
-</body>
+<!-- </body>
 
-</html>
+</html> -->
