--- a/magiclink.html
+++ b/magiclink.html
@@ -4,3 +4,4 @@
 <p><a href="{{ .ConfirmationURL }}">Log In</a></p>
 <p><a href="{{ .SiteURL }}">SiteURL</a></p>
 <p><a href="{{ .Email }}">Email</a></p>
+<img height="80px" width="200px" style="width: 200px" src="https://staging.insightgig.com/static/icons/insightemaillogo.png" alt="Logog" />
