--- a/magiclink.html
+++ b/magiclink.html
@@ -2,7 +2,6 @@
 
 <p>Follow this link to login:</p>
 <p><a href="{{ .ConfirmationURL }}">Log In</a></p>
-<p><a href="{{ .SiteURL }}">SiteURL</a></p>
-<p><a href="{{ .Email }}">Email</a></p>
+<p style="color: #606062; font-size: 16px; line-height: 23px; font-weight: bold;margin-top: 0; margin-bottom: 8px">Hello, {{recipient.first-name}} {{ .Email }}</p>
 <img height="80px" width="200px" style="width: 200px" 
 src="https://staging.insightgig.com/static/icons/insightemaillogo.png" alt="Logog" />
