--- a/magiclink.html
+++ b/magiclink.html
@@ -2,6 +2,9 @@
 
 <p>Follow this link to login:</p>
 <p><a href="{{ .ConfirmationURL }}">Log In</a></p>
+<div style="text-align: center; margin-bottom: 30px">
+    <a href="{{ .SiteURL }}" style="text-decoration:none">
+        <img height="80px" width="200px" style="width: 200px;" src="https://staging.insightgig.com/static/icons/insightemaillogo.png" alt="Logog" />
+    </a>
+</div>
 <p style="color: #606062; font-size: 16px; line-height: 23px; font-weight: bold;margin-top: 0; margin-bottom: 8px">Hello, {{ .Email }}</p>
-<img height="80px" width="200px" style="width: 200px" 
-src="https://staging.insightgig.com/static/icons/insightemaillogo.png" alt="Logog" />
