--- a/magiclink.html
+++ b/magiclink.html
@@ -8,3 +8,18 @@
     </a>
 </div>
 <p style="color: #606062; font-size: 16px; line-height: 23px; font-weight: bold;margin-top: 0; margin-bottom: 8px">Hello, {{ .Email }}</p>
+<p style="color: #979496; font-size: 16px; line-height: 23px; font-weight: 400; margin-top: 0; margin-bottom: 8px">
+    Thanks for signing up to Insightgig!
+</p>
+<p style="color: #979496; font-size: 16px; line-height: 23px; font-weight: 400; margin-top: 0; margin-bottom: 8px">
+    To complete your registration, please confirm your email address by clicking the link below.
+</p>
+<p style="margin: 30px 0; text-align: center;">
+    <a style="text-decoration: none; padding: 14px 21px; display: inline-block; font-style: normal; font-weight: 500; font-size: 20px; line-height: 100%; color: #FFFFFF; background: #0A96F5; border: none" href="{{ .ConfirmationURL }}">
+       Verify Email
+    </a>
+</p>
+<p style="color: #979496; font-size: 16px; line-height: 23px; font-weight: 400; margin-top: 0; margin-bottom: 8px">Alternatively, you can copy the link to your browser's address bar.</p>
+<p style="color: #979496; font-size: 16px; line-height: 23px; font-weight: 400; margin-top: 0; margin-bottom: 8px">If you don't use this link within 48 hours, it will expire. You can request a new verification link, if you need to.</p>
+<p style="color: #606062; margin-top: 20px; font-weight: bold; font-size: 16px; margin-bottom: 10px; line-height: 25px">Regards,<br />The Insightgig team</p>
+<hr />
