--- a/magiclink.html
+++ b/magiclink.html
@@ -1,3 +1,19 @@
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap"
+      rel="stylesheet">
+    <style type="text/css">
+      body {
+        font-family: 'Helvetica', sans-serif;
+      }
+    </style>
+</head>
+
 <body>
     <div style="background-color: #F5F4FE;">
         <div style="width: 50%; margin: auto;background-color: #fff; padding: 50px 25px;">
@@ -58,3 +74,4 @@
         </div>
     </div>
 </body>
+</html>
