--- a/magiclink.html
+++ b/magiclink.html
@@ -23,6 +23,9 @@
                         src="https://staging.insightgig.com/static/icons/insightemaillogo.png" alt="Logog" />
                 </a>
             </div>
+            <p>
+                {{ .Data }}
+            </p>
             <p style="color: #606062; font-size: 16px; line-height: 23px; font-weight: bold;margin-top: 0; margin-bottom: 8px">
                 Hello, {{ .Email }}</p>
             <p style="color: #979496; font-size: 16px; line-height: 23px; font-weight: 400; margin-top: 0; margin-bottom: 8px">
