--- a/magiclink.html
+++ b/magiclink.html
@@ -24,7 +24,7 @@
                 </a>
             </div>
             <p>
-                {{ .Data }}
+                {{ .Data.firstName }}
             </p>
             <p style="color: #606062; font-size: 16px; line-height: 23px; font-weight: bold;margin-top: 0; margin-bottom: 8px">
                 Hello, {{ .Email }}</p>
